--- a/Characters/Gwamba Hud.uxml
+++ b/Characters/Gwamba Hud.uxml
@@ -1,9 +1,9 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
-    <Style src="project://database/Assets/Characters/Designs/Guwba%20Hud.uss?fileID=7433441132597879392&amp;guid=09c1d2f441fe8624d8a5be5bba1f7864&amp;type=3#Guwba Hud" />
+    <Style src="project://database/Assets/Characters/Designs/Gwamba%20Hud.uss?fileID=7433441132597879392&amp;guid=09c1d2f441fe8624d8a5be5bba1f7864&amp;type=3#Gwamba Hud" />
     <ui:VisualElement name="RootElement">
         <ui:GroupBox name="Icons">
             <ui:GroupBox name="SubIcon">
-                <ui:VisualElement name="LifeIcon" style="background-image: url(&quot;project://database/Assets/Characters/Designs/Guwba.png?fileID=-837235628&amp;guid=6e5aacc0b23644643bd2658681a0951e&amp;type=3#Guwba_8&quot;);" />
+                <ui:VisualElement name="LifeIcon" style="background-image: url(&quot;project://database/Assets/Characters/Designs/Gwamba.png?fileID=-837235628&amp;guid=6e5aacc0b23644643bd2658681a0951e&amp;type=3#Gwamba_8&quot;);" />
                 <ui:Label text="X 0" name="LifeText" />
             </ui:GroupBox>
             <ui:GroupBox name="SubIcon">
