--- a/Huds/Menu Hud.uss
+++ b/Huds/Menu Hud.uss
@@ -78,15 +78,22 @@
 }
 #Save1, #Save2, #Save3, #Save4{
 	flex-direction: column;
-	width : 25%;
-	height : 80%;
+	width : 600px;
+	height : 60%;
 	border-radius : 12.5px;
 	background-color: rgb(224, 192, 0);
 	align-items: center;
 	justify-content: space-evenly;
 }
+#FileName1, #FileName2, #FileName3, #FileName4{
+	flex-direction: row;
+	width : 100%;
+	height : 60px;
+	align-items: center;
+	justify-content: space-evenly;
+}
 #SaveName1, #SaveName2, #SaveName3, #SaveName4{
-	width : 300px;
+	width : 350px;
 	height : 40px;
 	border-radius : 7.5px;
 	flex-direction: row;
@@ -108,13 +115,31 @@
 	align-self: center;
 	-unity-text-align : middle-center;
 }
-#Load1, #Load2, #Load3, #Load4, #Delete1, #Delete2, #Delete3, #Delete4{
-	width : 300px;
+#RenameFile1, #RenameFile2, #RenameFile3, #RenameFile4{
+	width : 100px;
+	height : 40px;
+	font-size : 25px;
+	-unity-text-align : middle-center;
+	border-radius : 5px;
 	background-color : rgba(255, 255, 0, 0.5);
+}
+#RenameFile1:hover, #RenameFile2:hover, #RenameFile3:hover, #RenameFile4:hover{
+	background-color : rgb(255, 160, 0);
+}
+#FileControl1, #FileControl2, #FileControl3, #FileControl4{
+	flex-direction: row;
+	width : 100%;
+	height : 60px;
+	align-items: center;
+	justify-content: space-evenly;
+}
+#Load1, #Load2, #Load3, #Load4, #Delete1, #Delete2, #Delete3, #Delete4{
+	width : 225px;
 	height : 40px;
 	font-size : 25px;
 	-unity-text-align : middle-center;
 	border-radius : 7.5px;
+	background-color : rgba(255, 255, 0, 0.5);
 }
 #Load1:hover, #Load2:hover, #Load3:hover, #Load4:hover, #Delete1:hover, #Delete2:hover, #Delete3:hover, #Delete4:hover{
 	background-color : rgb(255, 160, 0);
