--- a/Items/Level Gate Hud.uss
+++ b/Items/Level Gate Hud.uss
@@ -6,13 +6,22 @@
 	width: 100%;
 	height: 100%;
 	flex-direction: row;
+	align-items: flex-start;
+	justify-content: center;
+	align-content: center;
+}
+#ButtonsDisplay{
+	width: 100%;
+	height: 60%;
+	margin-top: 5%;
+	flex-direction: row;
 	align-items: center;
 	justify-content: space-evenly;
 	align-content: center;
 }
 #Level, #Boss, #Scenes{
-	width: 25%;
-	height: 40%;
+	width: 20%;
+	height: 50%;
 	background-color : rgb(255, 160, 0);
 }
 #Level:hover, #Boss:hover, #Scenes:hover{
